# world-embeddings

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  package.xml
cmake/: Findonnxruntime.cmake
config/: params.e2e.yaml  params.yaml
docker/: install_onnxruntime.sh
include/world_embeddings/: association.hpp  detector.hpp  encoder.hpp  entity_store.hpp  snapshot.hpp  types.hpp
launch/: world_embeddings.launch.py
scripts/: run_e2e.py
src/: association.cpp  detector_yolo.cpp  encoder_clip.cpp  entity_store.cpp  snapshot.cpp  world_embeddings_node.cpp
test/: CMakeLists.txt  test_association.cpp  test_detector.cpp  test_encoder.cpp  test_entity_store.cpp  test_pipeline_integration.cpp  test_snapshot.cpp
